{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "14fb6526-9ccf-4465-a99c-adb60647c2ab",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "05692ca5-ab91-48eb-b9d1-99953be4183c",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "bfabc801-c2f6-462f-b1ea-ea730d2af100",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "7c78dc0c-ce25-40f2-96e9-168538a3e309",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shift",
                    "type": "Button",
                    "id": "970853a8-66de-4273-ab1c-9b771471f935",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "9a6aa005-4f5c-448b-b11e-a1cc8a2294e9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "22f29dd0-15d2-4606-a6bd-5daab3b0d70d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b2e873e4-e779-437c-8462-67bcfbfcfa26",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be793876-a14d-47d5-ba34-68e34f15653f",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8efdbe22-9867-42ff-881b-e28671711539",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee6b9cc5-5cce-4681-a3ca-d4121a093bf7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79831b0f-ac55-4259-b4b9-874c7feef238",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b50e2e8f-b94b-4c7d-bf7e-774a76949f2f",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "4b083fde-9ed5-4b7f-915f-69cbf4c77760",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "769307da-f0a1-402d-a7e9-81a2db06ca4c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "44ce033b-e716-40cf-8020-f13dc74c6eea",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "f692e971-29c4-4131-a754-b8ac7ee885b3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "b37b38af-95a4-4d80-95c5-99cd198b159b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}